# multilingual_ml_project

./: .gitignore  README.md  base_model_pipeline_processing_training.ipynb  error_simulation_correction_pipeline.ipynb  pyproject.toml  sparknlp_error_simulation_pipeline.ipynb
corrections/: __init__.py  handle_language_errors.py  handle_missing_values_transformer.py  handle_swapped_columns.py  handle_typo_transformer.py  swap_verb.py
corruptions/: __init__.py  categorical_error.ipynb  categorical_transformer.py  error_transformer.py  missing_value_error.ipynb  missing_values_transformer.py  sentence_structure_error.ipynb  sentence_structure_transformer.py  swapped_colums_transformer.py  swapped_values_error.ipynb  typo_error.ipynb  typo_transformer.py
utils/: __init__.py  base_model_inference.py  error_simulation_pipeline.py
