[tool.poetry]
name = "multilingual-ml-project-sparknlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "multilingual_ml_project_sparknlp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^7.1.2"
ipykernel = "^6.29.4"
pandas = "^2.2.1"
pyspark = "^3.5.1"
spark-nlp = "^5.3.2"
scikit-learn = "^1.4.1.post1"
spacy = "^3.7.4"
langdetect = "^1.0.9"
transformers = "^4.39.3"
textacy = "^0.13.0"
torch = "^2.2.2"
tensorflow = "2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
